hphp/test/slow/nameof/reify.php.expectf

Fatal error: `nameof` cannot be used with a generic type in %s/nameof/reify.php on line 6
